--- a/client/app/landing/jumbotron.html
+++ b/client/app/landing/jumbotron.html
@@ -7,7 +7,7 @@
 
       <section class="text-box-landing">
 
-        <h1>Your campus community</h1>
+        <h1>Build lasting friendships</h1>
 
       </section>
 
