Updated landing page message. Cleaned up unused files

--- a/client/app/landing/corefeatures.html
+++ b/client/app/landing/corefeatures.html
@@ -4,7 +4,7 @@
 
     <section class="value-landing">
 
-      <h1>Explore your community <br>plan a grocery run, find someone to carpool, or post rental housing</h1>
+      <h1>Plan a grocery run, find someone to carpool, or post rental housing</h1>
 
     </section>
 
