--- a/client/app/landing/howitworks.html
+++ b/client/app/landing/howitworks.html
@@ -2,7 +2,7 @@
 
 <div class="homepage-hero-module">
     <div class="title-container">
-      <h1>Chat with your university student services - RA's, ResLife, Career Center, etc.</h1>
+      <h1>Chat with your university student services <br>RA's, ResLife, Career Center, Counselors, etc.</h1>
       <h3>Contact us to add your school</h3>
     </div>
 </div>
