Shutting down Campusly. Last commit.

--- a/client/app/landing/community.html
+++ b/client/app/landing/community.html
@@ -14,11 +14,13 @@
 
     </section>
 
+    <!-- Disabling sign-up form
     <div class="row text-center">
       <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 lead-btn">
         <button class="btn-rented-large primary" ui-sref="signup">Sign Up For Free!</button>
       </div>
     </div>
+    -->
 
     <div class="row lead-btn">
       <div class="col-sm-6 col-xs-12 col-md-6 col-lg-6">
