--- a/client/app/landing/jumbotron.html
+++ b/client/app/landing/jumbotron.html
@@ -13,35 +13,47 @@
 
       <section class="white-box-signup">
 
+        <p>Thank you for visiting Campusly. We have closed new sign-ups permanently.
+          <br><br>
+          If you are an existing user you can continue using the website.
+          <br><br>
+          Thank you very much for your engagement and community support! We hope to serve you in the near future.
+          <br><br>
+          Love,<br>
+          Campusly Team
+        </p>
+
+        <!-- Disabling sign-up -->
+
         <!-- Submits form to the register function in the landing controller file -->
-        <form class="main-form-signup" name="form" ng-submit="landing.register(form)" novalidate>
+        <!--<form class="main-form-signup" name="form" ng-submit="landing.register(form)" novalidate>-->
 
-          <!-- Submits the first name as string -->
-          <label class="lbl">
-            <input type="text" name="firstname" ng-model="landing.user.firstname" placeholder="First name" ng-class="{'has-success': form.firstname.$valid && landing.submitted, 'has-error': form.firstname.$invalid && landing.submitted}" required/>
-          </label>
+          <!--&lt;!&ndash; Submits the first name as string &ndash;&gt;-->
+          <!--<label class="lbl">-->
+            <!--<input type="text" name="firstname" ng-model="landing.user.firstname" placeholder="First name" ng-class="{'has-success': form.firstname.$valid && landing.submitted, 'has-error': form.firstname.$invalid && landing.submitted}" required/>-->
+          <!--</label>-->
 
-          <!-- Submits the last name as string -->
-          <label class="lbl">
-            <input type="text" name="lastname" ng-model="landing.user.lastname" placeholder="Last name" ng-class="{'has-success': form.lastname.$valid && landing.submitted, 'has-error': form.lastname.$invalid && landing.submitted}" required/>
-          </label>
+          <!--&lt;!&ndash; Submits the last name as string &ndash;&gt;-->
+          <!--<label class="lbl">-->
+            <!--<input type="text" name="lastname" ng-model="landing.user.lastname" placeholder="Last name" ng-class="{'has-success': form.lastname.$valid && landing.submitted, 'has-error': form.lastname.$invalid && landing.submitted}" required/>-->
+          <!--</label>-->
 
-          <!-- Submits the email as string -->
-          <label class="lbl">
-            <input type="email" name="email" ng-model="landing.user.email" placeholder="Your email address (.edu required)" ng-class="{ 'has-success': form.email.$valid && landing.submitted, 'has-error': form.email.$invalid && landing.submitted }" required>
-          </label>
+          <!--&lt;!&ndash; Submits the email as string &ndash;&gt;-->
+          <!--<label class="lbl">-->
+            <!--<input type="email" name="email" ng-model="landing.user.email" placeholder="Your email address (.edu required)" ng-class="{ 'has-success': form.email.$valid && landing.submitted, 'has-error': form.email.$invalid && landing.submitted }" required>-->
+          <!--</label>-->
 
-          <!-- Submits the password as string -->
-          <label class="lbl">
-            <input type="password" name="password" ng-model="landing.user.password" ng-minlength="8" placeholder="Password (minimum 8 characters)" ng-class="{ 'has-success': form.password.$valid && landing.submitted, 'has-error': form.password.$invalid && landing.submitted }" required>
-          </label>
+          <!--&lt;!&ndash; Submits the password as string &ndash;&gt;-->
+          <!--<label class="lbl">-->
+            <!--<input type="password" name="password" ng-model="landing.user.password" ng-minlength="8" placeholder="Password (minimum 8 characters)" ng-class="{ 'has-success': form.password.$valid && landing.submitted, 'has-error': form.password.$invalid && landing.submitted }" required>-->
+          <!--</label>-->
 
-          <div class="options">
-            <input type="submit" value="Sign up for free!" class="btn-rented-large primary">
-            <span>Already have an account? <a class="link" ui-sref="login">Sign in</a></span>
-          </div>
+          <!--<div class="options">-->
+            <!--<input type="submit" value="Sign up for free!" class="btn-rented-large primary">-->
+            <!--<span>Already have an account? <a class="link" ui-sref="login">Sign in</a></span>-->
+          <!--</div>-->
 
-        </form>
+        <!--</form>-->
 
       </section>
 
